--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,11 @@
         <div class="p-header__inner">
           <h1 class="p-header__title">
             <a class="p-header__logo" href="/">
-              <svg class="c-logo -primary">
-                <title>Engbody</title>
-                <use href="#logo"></use>
-              </svg>
+              <img src="/assets/img/logo.svg" alt="ENGBODY" width="96" height="12" />
             </a>
           </h1>
           <div class="p-header__cta">
-            <a class="c-button -primary" href="#">無料カウンセリングを受ける</a>
+            <a class="c-button -primary p-header__ctaButton" href="#">無料カウンセリングを受ける</a>
           </div>
         </div>
       </header>
@@ -29,13 +26,17 @@
         <div class="p-hero">
           <div class="p-hero__inner">
             <div class="p-hero__body">
-              <p class="p-hero__copy">
-                <span>Body Make</span>
-                <span>&amp; English</span>
-              </p>
+              <div class="p-hero__copy">
+                <p class="p-hero__copyLine"><span class="p-hero__copyText">Body Make</span></p>
+                <p class="p-hero__copyLine">
+                  <span class="p-hero__copyText">
+                    <span style="color: var(--color-main); margin-right: 4px">&amp;</span>English</span
+                  >
+                </p>
+              </div>
               <p class="p-hero__subCopy">英会話&amp;パーソナルトレーニングジム</p>
-              <p class="p-hero__button">
-                <a class="c-button -primary" href="#">無料カウンセリングを受ける</a>
+              <p class="u-mt-3 lg:u-mt-6">
+                <a class="c-button -primary p-hero__button" href="#">無料カウンセリングを受ける</a>
               </p>
             </div>
             <figure class="p-hero__image">
@@ -108,6 +109,9 @@
 
         <!-- Trainer -->
         <section class="p-section -bgPrimary">
+          <svg class="p-section__wave" aria-hidden="true">
+            <use href="#wave"></use>
+          </svg>
           <div class="p-section__inner">
             <h2 class="c-title -primary">
               <span lang="en">Our Trainer</span>
@@ -280,6 +284,9 @@
             </div>
             <!-- /.p-trainerTab -->
           </div>
+          <svg class="p-section__wave -reverse" aria-hidden="true">
+            <use href="#wave"></use>
+          </svg>
         </section>
 
         <!-- Studio -->
@@ -356,6 +363,9 @@
 
         <!-- Price -->
         <section class="p-section -bgPrimary">
+          <svg class="p-section__wave" aria-hidden="true">
+            <use href="#wave"></use>
+          </svg>
           <div class="p-section__inner">
             <h2 class="c-title -primary">
               <span lang="en">Price</span>
@@ -437,6 +447,9 @@
             </div>
             <!-- /.l-grid -->
           </div>
+          <svg class="p-section__wave -reverse" aria-hidden="true">
+            <use href="#wave"></use>
+          </svg>
         </section>
 
         <!-- Faq -->
