静的コーディング完了

--- a/src/index.html
+++ b/src/index.html
@@ -608,49 +608,52 @@
             </svg>
           </a>
         </div>
+        <figure class="p-footer__image">
+          <picture>
+            <source
+              type="image/webp"
+              srcset="/assets/img/sp_cta.webp, /assets/img/sp_cta@2x.webp 2x"
+              width="750"
+              height="360"
+              media="(max-width: 767px)"
+            />
+            <source
+              type="image/jpeg"
+              srcset="/assets/img/sp_cta.jpg, /assets/img/sp_cta@2x.jpg 2x"
+              width="750"
+              height="360"
+              media="(max-width: 767px)"
+            />
+            <source
+              type="image/webp"
+              srcset="/assets/img/pc_cta.webp, /assets/img/pc_cta@2x.webp 2x"
+              width="1800"
+              height="462"
+            />
+            <img
+              src="/assets/img/pc_cta.jpg"
+              alt="あなたもENGBODYで楽しく英語と運動習慣を身につけませんか？"
+              srcset="pc_cta.jpg, pc_cta@2x.jpg 2x"
+              width="1800"
+              height="462"
+              decoding="async"
+            />
+          </picture>
+        </figure>
         <div class="p-footer__cta">
-          <figure class="p-footer__image">
-            <picture>
-              <source
-                type="image/webp"
-                srcset="/assets/img/sp_cta.webp, /assets/img/sp_cta@2x.webp 2x"
-                width="750"
-                height="360"
-                media="(max-width: 767px)"
-              />
-              <source
-                type="image/jpeg"
-                srcset="/assets/img/sp_cta.jpg, /assets/img/sp_cta@2x.jpg 2x"
-                width="750"
-                height="360"
-                media="(max-width: 767px)"
-              />
-              <source
-                type="image/webp"
-                srcset="/assets/img/pc_cta.webp, /assets/img/pc_cta@2x.webp 2x"
-                width="1800"
-                height="462"
-              />
-              <img
-                src="/assets/img/pc_cta.jpg"
-                alt="あなたもENGBODYで楽しく英語と運動習慣を身につけませんか？"
-                srcset="pc_cta.jpg, pc_cta@2x.jpg 2x"
-                width="1800"
-                height="462"
-                decoding="async"
-              />
-            </picture>
-          </figure>
-          <p class="p-footer__message">Come join us!! 😊</p>
-          <p class="u-">
-            <a class="c-button -secondary" href="#">無料カウンセリングを受ける</a>
-          </p>
+          <div class="l-container">
+            <p class="p-footer__message">Come join us!! 😊</p>
+            <p class="u-mt-2 lg:u-mt-3">
+              <a class="c-button -primary -white" href="#">無料カウンセリングを受ける</a>
+            </p>
+          </div>
         </div>
         <div class="p-footer__bottom">
-          <svg class="c-logo -secondary">
-            <title>Engbody</title>
-            <use href="#logo"></use>
-          </svg>
+          <div class="l-container">
+            <div class="p-footer__logo">
+              <img src="/assets/img/logo-white.svg" alt="ENGBODY" />
+            </div>
+          </div>
         </div>
       </footer>
     </div>
